refactor!: replace auth strategy from cookie to header
